--- a/prjEscolaBluemix/src/main/webapp/views/aluno/buscarTodos.xhtml
+++ b/prjEscolaBluemix/src/main/webapp/views/aluno/buscarTodos.xhtml
@@ -9,105 +9,105 @@
 	<ui:define name="conteudo">
 		<h:body>
 			<h:form>
-				<p:dataTable var="parcela" value="#{parcelaBean.parcelas}" rows="10"
+				<p:dataTable var="aluno" value="#{alunoBean.alunos}" rows="10"
 					paginator="true"
 					paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 					rowsPerPageTemplate="5,10,15">
 
 					<p:column headerText="Aluno">
-						<h:outputText value="#{parcela.id}" />
+						<h:outputText value="#{aluno.id}" />
 					</p:column>
 
 					<p:column headerText="Matricula">
-						<h:outputText value="#{parcela.matricula}" />
+						<h:outputText value="#{aluno.matricula}" />
 					</p:column>
 
 					<p:column headerText="Id da Turma">
-						<h:outputText value="#{parcela.turma.id}" />
+						<h:outputText value="#{aluno.turma.id}" />
 					</p:column>
 
 					<p:column headerText="Nome">
-						<h:outputText value="#{parcela.nome}" />
+						<h:outputText value="#{aluno.nome}" />
 					</p:column>
 
 					<p:column headerText="CPF">
-						<h:outputText value="#{parcela.cpf}" />
+						<h:outputText value="#{aluno.cpf}" />
 					</p:column>
 
 					<p:column headerText="RG">
-						<h:outputText value="#{parcela.rg}" />
+						<h:outputText value="#{aluno.rg}" />
 					</p:column>
 
 					<p:column headerText="Orgao Exp do RG">
-						<h:outputText value="#{parcela.orgaoExp}" />
+						<h:outputText value="#{aluno.orgaoExp}" />
 					</p:column>
 
 					<p:column headerText="UF do RG">
-						<h:outputText value="#{parcela.ufRg}" />
+						<h:outputText value="#{aluno.ufRg}" />
 					</p:column>
 
 					<p:column headerText="Sexo">
-						<h:outputText value="#{parcela.sexo}" />
+						<h:outputText value="#{aluno.sexo}" />
 					</p:column>
 
 					<p:column headerText="Data de Nascimento">
-						<h:outputText value="#{parcela.dataNascimento.time}">
+						<h:outputText value="#{aluno.dataNascimento.time}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
 					<p:column headerText="E-mail">
-						<h:outputText value="#{parcela.email}" />
+						<h:outputText value="#{aluno.email}" />
 					</p:column>
 
 					<p:column headerText="Celular">
-						<h:outputText value="#{parcela.celular}" />
+						<h:outputText value="#{aluno.celular}" />
 					</p:column>
 
 					<p:column headerText="Telefone">
-						<h:outputText value="#{parcela.telefone}" />
+						<h:outputText value="#{aluno.telefone}" />
 					</p:column>
 
 					<p:column headerText="Pai">
-						<h:outputText value="#{parcela.pai}" />
+						<h:outputText value="#{aluno.pai}" />
 					</p:column>
 
 					<p:column headerText="Mãe">
-						<h:outputText value="#{parcela.mae}" />
+						<h:outputText value="#{aluno.mae}" />
 					</p:column>
 
 					<p:column headerText="Cep">
-						<h:outputText value="#{parcela.cep}" />
+						<h:outputText value="#{aluno.cep}" />
 					</p:column>
 
 					<p:column headerText="Endereço Residencial">
-						<h:outputText value="#{parcela.endereco}" />
+						<h:outputText value="#{aluno.endereco}" />
 					</p:column>
 
 					<p:column headerText="Bairro">
-						<h:outputText value="#{parcela.bairro}" />
+						<h:outputText value="#{aluno.bairro}" />
 					</p:column>
 
 					<p:column headerText="Cidade">
-						<h:outputText value="#{parcela.cidade}" />
+						<h:outputText value="#{aluno.cidade}" />
 					</p:column>
 
 					<p:column headerText="Estado">
-						<h:outputText value="#{parcela.estado}" />
+						<h:outputText value="#{aluno.estado}" />
 					</p:column>
 
 					<p:column headerText="Status">
-						<h:outputText value="#{parcela.status}" />
+						<h:outputText value="#{aluno.status}" />
 					</p:column>
 
 					<p:column headerText="Data de Matricula">
-						<h:outputText value="#{parcela.dataMatricula.time}">
+						<h:outputText value="#{aluno.dataMatricula.time}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
 					<p:column headerText="Data de Cancelamento">
-						<h:outputText value="#{parcela.dataCancelamento.time}">
+						<h:outputText value="#{aluno.dataCancelamento.time}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
