correcoes no matricular
erros na hora de atualizar o aluno matriculado.

--- a/prjEscolaBluemix/src/main/webapp/views/aluno/matricular.xhtml
+++ b/prjEscolaBluemix/src/main/webapp/views/aluno/matricular.xhtml
@@ -20,6 +20,10 @@
 								<h:outputText value="Id aluno:" />
 								<p:inputText value="#{alunoBean.aluno.id}" label="idAluno"
 									required="true" />
+									
+									<h:outputText value="Id Turma:" />
+								<p:inputText value="#{alunoBean.aluno.turma.id}" label="idAluno"
+									required="true" />
 
 								<h:outputText value="Taxa de Matricula:* " />
 								<p:inputText value="#{alunoBean.aluno.valorTaxaMatricula}"
